--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-theme: jekyll-theme-architect
-title: The Goodreads Classics
+theme: jekyll-theme-cayman
+title: 📚The Goodreads Classics📚
 description: Computationally analyzing Goodreads reviews of "classic" literature
 
