update Twitter card

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-cayman
 title: 📚The Goodreads Classics📚
 description: Computationally analyzing Goodreads reviews of "classic" literature
-
+image: assets/Observable-ratings.png
 
 
