--- a/_config.yml
+++ b/_config.yml
@@ -2,5 +2,5 @@ theme: jekyll-theme-cayman
 title: 📚The Goodreads Classics📚
 description: Computationally analyzing Goodreads reviews of "classic" literature
 image: assets/images/Observable-ratings.png
-
+google_analytics: G-NW08SY9XWM
 
